# 311_service_requests

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  vercel.json
backend/: classify_311.py  data_models.py  db_design.sql  evaluation_script.py  extract_311_categories.py  extractor.py  import_service_requests.py  migrate_311_categories.py  pipeline.py  test_pipeline.py
backend/tests/: test_db_connection.py  test_import_service_requests.py  test_migrate_311_categories.py  test_pipeline.py  test_process_and_save.py
frontend/: README.md  frontend_log.txt  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: env.ts  globals.css  layout.tsx  page.tsx
frontend/app/auth/signout/: route.ts
frontend/app/dashboard/: dashboard-client.tsx  page.tsx
frontend/app/dashboard/login/: page.tsx
frontend/app/dashboard/map/: page.tsx
frontend/app/public/: page.tsx
frontend/app/test-heatmap/: page.tsx
frontend/components/: auth-form.tsx  dashboard-filter.tsx  dashboard-map.tsx  dashboard-nav.tsx  public-filter.tsx  public-nav.tsx  request-detail.tsx  requests-table.tsx  service-request-map.tsx  stats-cards.tsx  stats-charts.tsx  test-heatmap.tsx
frontend/components/ui/: badge.tsx
frontend/scripts/: create-user.ts
frontend/types/: index.ts
web-app/: next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.js
web-app/.next/: trace
web-app/.next/cache/: .rscinfo
web-app/.next/server/: server-reference-manifest.js  server-reference-manifest.json
web-app/app/: layout.tsx  page.tsx
web-app/app/chat/: page.tsx
web-app/app/dashboard/: DashboardTable.tsx  DashboardVisualizations.tsx  page.tsx
web-app/components/: Chat.tsx
web-app/public/: evaluation_requests_test.csv
web-app/src/app/: globals.css  layout.tsx  page.tsx
web-app/src/components/: Chat.tsx
(+50 files in other folders)
